[build-system]
requires = [
    "scikit-build-core>=0.10.0",
    "pybind11[global]>=2.10.0",
    # Note: cmake is injected by scikit-build-core, don't include it here
    "setuptools>=70.1",  # Needed for wheel metadata
    "setuptools-scm>=8.0.0",  # For dynamic version management
]
build-backend = "scikit_build_core.build"

[project]
name = "tiledbsoma"
description = "Python API for efficient storage and retrieval of single-cell data using TileDB"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "TileDB, Inc.", email = "help@tiledb.io"}
]
maintainers = [
    {name = "TileDB, Inc.", email = "help@tiledb.io"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "anndata>=0.10.1",
    "attrs>=22.2",
    "more-itertools",
    "numpy",
    "pandas",
    "pyarrow",
    "scanpy>=1.9.2",
    "scipy",
    "somacore==1.0.29",
    "typing-extensions>=4.5.0",
]
dynamic = ["version"]

[project.optional-dependencies]
# Development dependencies
dev = [
    "black",
    "dask",
    "pytest",
    "pytest-cov",
    "ruff",
    "sparse",
    "typeguard==4.4.2",
    "types-setuptools",
    "more-itertools",
    "hypothesis",
    "deepdiff",
]
# Spatial I/O dependencies
spatial-io = [
    "geopandas",
    "tifffile",
    "pillow",
    "spatialdata>=0.2.5",
    "xarray",
    "dask",
]
# All optional dependencies (dev + spatial-io)
all = [
    "black",
    "dask",
    "pytest",
    "pytest-cov",
    "ruff",
    "sparse",
    "typeguard==4.4.2",
    "types-setuptools",
    "more-itertools",
    "hypothesis",
    "deepdiff",
    "geopandas",
    "tifffile",
    "pillow",
    "spatialdata>=0.2.5",
    "xarray",
]

[tool.scikit-build]
# CMake configuration
# Note: We don't use --preset here because scikit-build-core configures CMake directly
# The CMakeLists.txt uses ExternalProject to build libtiledbsoma with the vcpkg preset
build-dir = "build"

[tool.scikit-build.cmake]
# CMake version requirement (use version instead of minimum-version for scikit-build-core >= 0.8)
version = ">=3.21,<4"  # CMake 4 builds are broken on ARM Linux: https://github.com/single-cell-data/TileDB-SOMA/issues/3890
# scikit-build-core automatically picks up CMAKE_TOOLCHAIN_FILE from environment
# We set it in before-build hooks via setup_build_env.sh

[tool.scikit-build.cmake.define]
# CMake build type - Release for production builds
CMAKE_BUILD_TYPE = "Release"
# Disable deprecated TileDB APIs
TILEDB_REMOVE_DEPRECATIONS = "ON"

[tool.scikit-build.metadata.version]
# Dynamic version provider - uses setuptools_scm for git-based versioning
# This automatically derives version from git tags without needing a VERSION file
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.scikit-build.wheel]
packages = ["src/tiledbsoma"]

# ============================================================================
# cibuildwheel configuration
# Multi-platform wheel building for CI/CD
# ============================================================================
[tool.cibuildwheel]
# Target Python versions
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*"]
skip = ["*-win32", "*-manylinux_i686", "*-musllinux_*"]

# Build and test configuration
build-verbosity = 3
test-command = "python -c 'import tiledbsoma; print(tiledbsoma.pytiledbsoma.__file__); tiledbsoma.show_package_versions()'"
test-requires = ["pytest"]

[tool.cibuildwheel.linux]
# Use manylinux_2_28 for better compatibility with modern dependencies
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

# Install system dependencies and bootstrap vcpkg
# Note: vcpkg is checked out inside the container since cibuildwheel only copies apis/python/
# {project} is the temporary directory where cibuildwheel copies the package
before-all = [
    "yum install -y git ninja-build perl-IPC-Cmd zip autoconf automake libtool pkg-config",
    "git clone --depth 1 https://github.com/microsoft/vcpkg.git {project}/../vcpkg",
    "{project}/../vcpkg/bootstrap-vcpkg.sh",
]

# Set up vcpkg environment before each build
# This runs for each Python version and sets environment variables that persist to the build
# We use eval to execute export commands from the script so they persist to the build step
before-build = "export VCPKG_ROOT={project}/../vcpkg && {project}/apis/python/scripts/setup_build_env.sh"

# Environment variables for vcpkg build
environment = {VCPKG_FORCE_SYSTEM_BINARIES = "1"}

[tool.cibuildwheel.macos]
# Set minimum macOS deployment target for compatibility
environment = {MACOSX_DEPLOYMENT_TARGET = "13.3"}

# Install system dependencies and bootstrap vcpkg
# Note: vcpkg is checked out inside the container since cibuildwheel only copies apis/python/
# {project} is the temporary directory where cibuildwheel copies the package
before-all = [
    "brew update || true",
    "brew install automake llvm ninja git || true",
    "git clone --depth 1 https://github.com/microsoft/vcpkg.git {project}/../vcpkg",
    "{project}/../vcpkg/bootstrap-vcpkg.sh",
]

[tool.cibuildwheel.windows]
# Install system dependencies and bootstrap vcpkg
before-all = [
    "choco install ninja cmake git -y",
    "powershell -ExecutionPolicy Bypass -File {project}\\apis\\python\\scripts\\setup_build_env.ps1",
]

# Note: Version is automatically derived from git tags via setuptools_scm
# RELEASE-VERSION file can be generated as a fallback using _get_version.py
# if git is not available (e.g., in sdist tarballs)

[tool.setuptools_scm]
# Configure setuptools_scm to work with the project structure
# The version will be derived from git tags automatically
# Root directory is the repository root (not apis/python)
# This allows setuptools_scm to find git tags from the repository root
root = "../.."
# Write version to a file for CMake to read and for runtime access
# When root is set, write_to is resolved relative to the root directory
# So we need to specify the full path from the root
write_to = "apis/python/src/tiledbsoma/_version.py"
# Use git to find version (default behavior)
# This will work with tags like "1.0.0", "v1.0.0", etc.
fallback_version = "0.0.0+unknown"

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
warn_unreachable = true
strict = true
python_version = 3.9

[[tool.mypy.overrides]]
module = "tiledbsoma._query_condition"
ignore_errors = true

[tool.ruff]
fix = true
preview = true  # enables "beta" rules: https://docs.astral.sh/ruff/preview/
exclude = ["*.cc"]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [  # see https://docs.astral.sh/ruff/rules/
    # consider adding:  A (flake8-builtins) and TC (flake8-type-checking)
    "ANN",  # flake8-annotations
    "ARG",  # flake8-unused-arguments
    "B",    # flake8-bugbear
    "BLE",  # flake8-blind-exception
    "C4",   # flake8-comprehensions
    "COM",  # flake8-commas
    "CPY",  # flake8-copyright
    "D",    # pydocstyle (Google convention, see setting below)
    "E",    # pycodestyle
    "ERA",  # eradicate
    "F",    # Pyflakes
    "FA",   # flake8-future-annotations
    "FLY",  # flynt
    "I",    # isort
    "ICN",  # flake8-import-conventions
    "INP",  # flake8-no-pep420
    "ISC",  # flake8-implicit-str-concat
    "LOG",  # flake8-logging
    "NPY",  # numpy-specific rules
    "PD",   # pandas-vet
    "PERF", # perflint
    "PIE",  # flake8-pie
    "PLC",  # pylint-convention
    "PLE",  # pylint-error
    "PLW",  # pylint-warning
    "PTH",  # flake8-use-pathlib
    "S",    # flake8-bandit
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # Ruff-specific rules
    "SLOT", # flake8-slots
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "W",    # pycodestyle warnings
    "YTT",  # flake8-2020
    "UP",   # pyupgrade
]
ignore = [
    "E501",     # line too long
    "D417",     # disable documentation for every function parameter
    "D205",     # disable blank line requirement between summary and description
    "S101",     # Use of `assert` detected
    "COM812",   # Ignore recommended by Ruff
    "SIM105",   # contextlib.suppress
    "PLC0415",  # inport-outside-top-level
    "PLC2701",  # import-private-name
    "PLW1514",  # unspecified-encoding
    "PLW2901",  # redefined-loop-name
    "PD002",    # pandas-use-of-inplace-argument
]
extend-select = []

[tool.ruff.lint.per-file-ignores]
# Ignore these rules everywhere except for the `src/` directory.
# Over time, we should enforce these rules more broadly.
"!apis/python/src/**.py" = ["ANN", "ARG", "BLE", "C4", "CPY", "D", "ERA", "B", "INP", "S", "T20", "NPY002", "PTH"]

# Ignore in notebooks
"apis/python/**/*.ipynb" = ["COM"]

# Temporarily disable checks in the io and io.spatial modules.
"apis/python/src/tiledbsoma/io/**/*.py" = [
    "D100",  # Missing docstring in public module (TEMP disable)
    "D101",  # Missing docstring in public class (TEMP disable)
    "D102",  # Missing docstring in public method (TEMP disable)
    "D103",  # Missing docstring in public function (TEMP disable)
    "D104",  # Missing docstring in private module (TEMP disable)
    "D107",  # Missing docstring in `__init__` (TEMP disable)
]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "tiledbsoma", "tiledb", "first-party", "local-folder"]
no-lines-before = ["tiledb"]

[tool.ruff.lint.isort.sections]
"tiledbsoma" = ["tiledbsoma"]
"tiledb" = ["tiledb"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-copyright]
author = "TileDB, Inc. and The Chan Zuckerberg Initiative Foundation"
notice-rgx = "(?i)Copyright \\(C\\)"  # do not require year
min-file-size = 1   # don't require copyright on empty files, e.g., __init__.py

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
# additional import aliases to be enforced
anndata = "ad"
scanpy = "sc"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Support for spatial types is experimental",
    "ignore:.*this looks like a string-form forward reference imported from another module.*"
]
markers = [
    "slow: mark test as slow",
    "spatialdata: test of SpatialData integration",
    "medium_runner: tests that are too large for the MacOS GitHub runners",
]
