[metadata]
name = tiledbsc
description = Python API for efficient storage and retrieval of single-cell data using TileDB
long_description =  file: README.md
long_description_content_type = text/markdown
author = TileDB, Inc.
author_email = help@tiledb.io
maintainer = TileDB, Inc.
maintainer_email = help@tiledb.io
url = https://github.com/single-cell-data/TileDB-SingleCell/apis/python
license = MIT
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Bio-Informatics
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir=
    = src
packges = tiledbsc
platforms = any
zip_safe = False
# The numpy pin is to avoid
# "ImportError: Numba needs NumPy 1.21 or less"
install_requires =
    tiledb>=0.15.1
    scipy
    numpy<1.22
    pandas
    pyarrow
    anndata
    scanpy
python_requires = >3.7
setup_requires =
    setuptools_scm
    pybind11

[options.extras_require]
dev =
    black
    pytest
    anndata
ci =
    black
    pytest
    anndata
    pybind11

[tool.setuptools_scm]
version_scheme = guess-next-dev
local_scheme = dirty-tag
write_to = ./version.py
