[metadata]
name = tiledbsoma
description = Python API for efficient storage and retrieval of single-cell data using TileDB
long_description =  file: README.md
long_description_content_type = text/markdown
author = TileDB, Inc.
author_email = help@tiledb.io
maintainer = TileDB, Inc.
maintainer_email = help@tiledb.io
url = https://github.com/single-cell-data/TileDB-SOMA/tree/main/apis/python
license = MIT
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Bio-Informatics
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir=
    = src
packges = tiledbsoma
platforms = any
zip_safe = False
install_requires =
    anndata
    pandas
    pyarrow
    scanpy
    scipy
    tiledb==0.19.0
    typing_extensions
python_requires = >3.7

[options.extras_require]
dev =
    black
    flake8-bugbear
    isort
    pytest
    typeguard

[isort]
profile = black
known_third_party = anndata
skip = dist_links

[flake8]
statistics = true
ignore = E203,E501,W503,B950
select = B,C,E,F,W,T4,B9
extend-exclude = dist_links

[mypy]
exclude = tests|dist_links|version.py
show_error_codes = True
ignore_missing_imports = True
warn_unreachable = True
strict = True
